--- a/demo.html
+++ b/demo.html
@@ -220,10 +220,10 @@
             click: function (e) {
                 console.log('click取消');
                 e.target.parentNode.classList.remove('move-out-click');
-                e.target.parentNode.style.webkitTransitionDuration = '125ms';
-                e.target.parentNode.style.transitionDuration = '125ms';
-                e.target.parentNode.style.webkitTransform = 'translateX(0px)';
-                e.target.parentNode.style.transform = 'translateX(0px)';
+                e.target.parentNode.style.webkitTransitionDuration = '200ms';
+                e.target.parentNode.style.transitionDuration = '200ms';
+                e.target.parentNode.style.webkitTransform = 'translate3d(0, 0, 0)';
+                e.target.parentNode.style.transform = 'translate3d(0, 0, 0)';
             }
         }]
     });
